<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    tools:context=".SwitchExternalVideoActivity">

    <RelativeLayout
        android:id="@+id/fl_local"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_join" >

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fl_uvc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_join">
        <com.serenegiant.usb.widget.UVCCameraTextureView
            android:id="@+id/camera_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_channel"
            android:layout_width="0dp"
            android:digits="@string/chanel_support_char"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/channel_id" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/localVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/localvideo"
        android:layout_above="@id/ll_join"
        android:enabled="false"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="24dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/usbVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usbvideo"
        android:layout_above="@id/localVideo"
        android:enabled="false"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="24dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/screenshare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screenshare"
        android:layout_above="@id/usbVideo"
        android:enabled="false"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="24dp"/>


</RelativeLayout>
